@@ -1,4 +1,7 @@
   28 Feb 2019; Horea Christian <h.chr@mail.ru> gebuilder-9999.ebuild:
+  app-misc/gebuilder: removed .gentoo traces
+
+  28 Feb 2019; Horea Christian <h.chr@mail.ru> gebuilder-9999.ebuild:
   app-misc/gebuilder: installing form correct dir
 
 *gebuilder-9999 (27 Feb 2019)
